# Reverbic

./: .env.example  .gitignore  CHANGELOG.es.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  CUsersejaraAppDataLocalTempreverbic_review_diff.txt  FUTURE_FEATURES.md  LEGAL.md  LICENSE  PRIVACY.md  README.es.md  README.md  build.rs  install.ps1  reverbic.rc
.cargo/: config.toml
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  labels.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml  question.yml
.github/workflows/: ci.yml  codeql.yml  deploy-pages.yml  labels.yml  release.yml
assets/: games.json  reverbic.rc
docs/: README.md  architecture.md  configuration.md  data-sources.md  development.md  discord-rich-presence.md  game-integrations.md  i18n.md  installation.md  keyboard-and-mouse.md  radio.md  release.md  spotify.es.md  spotify.md  theme-system.md  troubleshooting.md  updater.md  windows-features.md  youtube.es.md  youtube.md
locales/: en.json  es.json
manifests/s/Sewandev/Reverbic/1.0.0/: Sewandev.Reverbic.installer.yaml  Sewandev.Reverbic.locale.en-US.yaml  Sewandev.Reverbic.yaml
manifests/s/Sewandev/Reverbic/1.3.1/: Sewandev.Reverbic.installer.yaml
scoop/: reverbic.json
scripts/: install.ps1
src/: app.rs  config.rs  error.rs  favorites.rs  game_detect.rs  http.rs  i18n.rs  install.rs  library.rs  main.rs  overlay.rs  paths.rs  playlists.rs  preview.rs  schedule.rs  shell.rs  telemetry.rs  terminal.rs  update.rs  youtube_bookmarks.rs
src/app/: control_center.rs  favorites.rs  input.rs  integrations.rs  metadata.rs  mod.rs  modal.rs  notice.rs  on_demand.rs  player_ctrl.rs  playlists.rs  search.rs  spotify_state.rs  update_ctrl.rs  youtube.rs  youtube_state.rs
src/audio/: device_monitor.rs  meter.rs  mod.rs  player.rs  stream.rs
src/headless/: client.rs  daemon.rs  ipc.rs  mod.rs  resolve.rs
src/integrations/: mod.rs
src/integrations/discord/: activity.rs  ipc.rs  mod.rs
src/integrations/dota2/: mod.rs  server.rs  state.rs
src/integrations/spotify/: albums.rs  devices.rs  error.rs  library.rs  mod.rs  oauth.rs  player.rs  playlists.rs  radio.rs  search.rs
src/integrations/spotify/fixtures/: album_tracks_current.json  devices_current.json  playback_state_episode_current.json  playback_state_episode_or_missing_item.json  playback_state_missing_device.json  playback_state_track_current.json  playlist_items_current.json  playlist_items_legacy_direct_tracks.json  profile_current_minimal.json  profile_legacy_full.json  recently_played_current.json  saved_albums_current.json  saved_tracks_current.json  search_tracks_current.json  search_tracks_missing_optional_fields.json  top_tracks_current.json  user_playlists_current_items_total.json  user_playlists_legacy_tracks_total.json
src/integrations/youtube/: cookies.rs  deno.rs  error.rs  install.rs  mod.rs  playlists.rs  quickjs.rs  resolve.rs  search.rs  sponsorblock.rs
src/metadata/: icy.rs  mod.rs  track_enrichment.rs
src/onboarding/: ambience.rs  ascii_gif.rs  mod.rs  state.rs  transitions.rs  view.rs
src/station/: enrichment.rs  mod.rs  on_demand.rs  radio_browser.rs  registry.rs
src/ui/: mod.rs  renderer.rs  strings.rs  theme.rs
src/ui/renderer/: ambient.rs  components.rs  layout.rs  mod.rs  overlays.rs  screensaver.rs
src/ui/theme/: mod.rs  palettes.rs  reverbic.rs
src/ui/widgets/: ambient_picker.rs  clock.rs  controls.rs  countdown.rs  local_time.rs  logo.rs  mod.rs  now_playing.rs  now_playing_overlay.rs  on_demand_panel.rs  progress.rs  recent_tracks.rs  saved_tracks.rs  search_modal.rs  settings_panel.rs  spotify_profile.rs  station_details.rs  station_list.rs  theme_picker.rs  visualizer.rs  vu_meter.rs
src/ui/widgets/search_modal/: helpers.rs  integrations.rs  layout.rs  mod.rs  notice_panel.rs  settings.rs  spotify.rs  tabs.rs  youtube.rs
telemetry/: README.md  worker.js  wrangler.toml
website/: astro.config.mjs  package-lock.json  package.json
website/src/: i18n.ts
website/src/components/: Landing.astro
website/src/layouts/: Layout.astro
website/src/pages/: index.astro
