[package]
name    = "reverbic"
version = "0.1.0"
edition = "2021"

[dependencies]
ratatui            = "0.29"
crossterm          = { version = "0.28", features = ["event-stream"] }
tokio              = { version = "1",    features = ["full"] }
reqwest            = { version = "0.12", features = ["stream"] }
rodio              = { version = "0.22", default-features = false, features = ["symphonia-all", "playback"] }
bytes              = "1"
thiserror          = "2"
tracing            = "0.1"
tracing-appender   = "0.2"
tracing-subscriber = { version = "0.3", features = ["env-filter", "chrono"] }
futures-util       = "0.3"
serde              = { version = "1", features = ["derive"] }
serde_json         = "1"
chrono             = "0.4"

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.58", features = [
    "Win32_Foundation",
    "Win32_Graphics_Gdi",
    "Win32_System_LibraryLoader",
    "Win32_UI_WindowsAndMessaging",
] }

[lints.clippy]
unwrap_used = "deny"
