[package]
name    = "reverbic"
version = "1.4.2"
edition = "2021"

[dependencies]
ratatui            = "0.29"
crossterm          = { version = "0.28", features = ["event-stream"] }
tokio              = { version = "1",    features = ["full"] }
reqwest            = { version = "0.12", features = ["stream", "json"] }
rodio              = { version = "0.22", default-features = false, features = ["symphonia-all", "playback"] }
bytes              = "1"
thiserror          = "2"
tracing            = "0.1"
tracing-appender   = "0.2"
tracing-subscriber = { version = "0.3", features = ["env-filter", "chrono"] }
futures-util       = "0.3"
image              = { version = "0.25", default-features = false, features = ["gif"] }
serde              = { version = "1", features = ["derive"] }
serde_json         = "1"
chrono             = "0.4"
sha2               = "0.10"
rand               = { version = "0.8", default-features = false, features = ["std", "std_rng"] }
base64             = "0.21"
librespot-core     = { version = "0.8", default-features = false, features = ["rustls-tls-native-roots"] }
librespot-playback = { version = "0.8", default-features = false, features = ["rodio-backend", "rustls-tls-native-roots"] }
librespot-audio    = { version = "0.8", default-features = false, features = ["rustls-tls-native-roots"] }
librespot-connect  = { version = "0.8", default-features = false, features = ["rustls-tls-native-roots"] }
librespot-metadata = { version = "0.8", default-features = false, features = ["rustls-tls-native-roots"] }
nucleo-matcher     = "0.3"
keyring            = { version = "3", features = ["apple-native", "linux-native-sync-persistent", "windows-native"] }

[target.'cfg(target_os = "windows")'.dependencies]
windows-core = "0.58"
windows = { version = "0.58", features = [
    "implement",
    "Win32_Foundation",
    "Win32_Graphics_Gdi",
    "Win32_Media_Audio",
    "Win32_Media_Audio_Endpoints",
    "Win32_Globalization",
    "Win32_System_Com",
    "Win32_System_Console",
    "Win32_System_Diagnostics_ToolHelp",
    "Win32_System_LibraryLoader",
    "Win32_System_Threading",
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI_Shell",
    "Win32_UI_Shell_PropertiesSystem",
    "Win32_UI_Input_KeyboardAndMouse",
] }

[build-dependencies]
embed-resource = "2"

[profile.release]
opt-level     = 3
lto           = "thin"
codegen-units = 1
strip         = "symbols"

[lints.clippy]
unwrap_used = "deny"
