[package]
name        = "reverbic"
version     = "1.5.4"
edition     = "2021"
description = "Terminal player for radio, Spotify and YouTube with gaming overlay and Discord Rich Presence"
repository  = "https://github.com/sewandev/Reverbic"
license     = "MIT"
authors     = ["Esteban Jaramillo"]
readme      = "README.md"
keywords    = ["radio", "spotify", "youtube", "terminal", "tui"]
categories  = ["command-line-utilities", "multimedia::audio"]

[dependencies]
ratatui            = "0.30"
crossterm          = { version = "0.29", features = ["event-stream"] }
tokio              = { version = "1",    features = ["full"] }
reqwest            = { version = "0.12", features = ["stream", "json"] }
rodio              = { version = "0.22", default-features = false, features = ["symphonia-all", "playback"] }
bytes              = "1"
thiserror          = "2"
tracing            = "0.1"
tracing-appender   = "0.2"
tracing-subscriber = { version = "0.3", features = ["env-filter", "chrono"] }
futures-util       = "0.3"
flate2             = "1"
image              = { version = "0.25", default-features = false, features = ["gif"] }
serde              = { version = "1", features = ["derive"] }
serde_json         = "1"
chrono             = "0.4"
sha2               = "0.11"
tar                = "0.4"
rand               = { version = "0.9", default-features = false, features = ["std", "std_rng"] }
base64             = "0.21"
dunce              = "1"
zip                = { version = "2", default-features = false, features = ["deflate"] }
librespot-core     = { version = "0.8", default-features = false, features = ["rustls-tls-native-roots"] }
librespot-playback = { version = "0.8", default-features = false, features = ["rodio-backend", "rustls-tls-native-roots"] }
librespot-audio    = { version = "0.8", default-features = false, features = ["rustls-tls-native-roots"] }
librespot-connect  = { version = "0.8", default-features = false, features = ["rustls-tls-native-roots"] }
librespot-metadata = { version = "0.8", default-features = false, features = ["rustls-tls-native-roots"] }
nucleo-matcher     = "0.3"
keyring            = { version = "3", features = ["apple-native", "windows-native"] }
arboard            = { version = "3.6.1", default-features = false }
directories        = "6"
clap               = { version = "4", features = ["derive"] }

[target.'cfg(target_os = "windows")'.dependencies]
windows-core = "0.58"
windows = { version = "0.58", features = [
    "implement",
    "Win32_Foundation",
    "Win32_Graphics_Gdi",
    "Win32_Media_Audio",
    "Win32_Media_Audio_Endpoints",
    "Win32_Globalization",
    "Win32_System_Com",
    "Win32_System_Console",
    "Win32_System_Diagnostics_ToolHelp",
    "Win32_System_LibraryLoader",
    "Win32_System_Threading",
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI_Shell",
    "Win32_UI_Shell_PropertiesSystem",
    "Win32_UI_Input_KeyboardAndMouse",
] }

[build-dependencies]
embed-resource = "2"

# Vendored TLS-patched fork of hyper-proxy2 to drop the vulnerable rustls-webpki
# 0.102.8 instance pulled transitively through librespot-core. See issue #169.
[patch.crates-io]
hyper-proxy2 = { path = "third_party/hyper-proxy2" }

[profile.release]
opt-level     = 3
lto           = "thin"
codegen-units = 1
strip         = "symbols"

[lints.clippy]
unwrap_used = "deny"
